[package]
name = "rc-things"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", optional = true, default-features = false, features = ["bevy_winit", "bevy_gilrs"] }
serde = { version = "1.0.148", features = ["derive"], optional = true }
rmp-serde = { version = "1.1.1", optional = true }
iyes_loopless = { version = "0.9.1", features = ["fixedtimestep"], optional = true }
tello = { version = "0.6.3", optional = true }
tokio = { version = "1.23.0", features = ["full"], optional = true }
rppal = { version = "0.14.1", optional = true }
#crossbow = { version = "0.2.3", optional = true }


[features]
car-client = ["bevy", "serde", "rmp-serde", "iyes_loopless"]
car-server = ["serde", "rmp-serde", "tokio", "rppal"]
robot-client = ["bevy", "serde", "rmp-serde", "iyes_loopless"]
robot-server = ["serde", "rmp-serde", "tokio", "rppal"]
tello-client = ["bevy", "tello"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.aarch64-unknown-linux-gnu]
linker = "/usr/local/bin/aarch64-none-elf-gcc"

#[package.metadata]
#app_name = "rc-things"
#
#[package.metadata.android]
#release_build_targets = ["aarch64-linux-android"]
#
#[[package.metadata.android.plugins_local_projects]]
#include = ":crossbow"
#dont_implement = true
#
#[[package.metadata.android.plugins_local_projects]]
#include = ":crossbow:lib"
#
#[package.metadata.android.manifest]
#package = "com.crossbow.example.permissions"
#
#[[package.metadata.android.manifest.uses_permission]]
#name = "android.permission.INTERNET"
#
#[package.metadata.android.manifest.uses_sdk]
#min_sdk_version = 19
#target_sdk_version = 31
