[package]
name = "rc-things"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", optional = true, default-features = false, features = ["bevy_winit", "bevy_gilrs"] }
serde = { version = "1.0.148", features = ["derive"], optional = true }
rmp-serde = { version = "1.1.1", optional = true }
iyes_loopless = { version = "0.9.1", features = ["fixedtimestep"], optional = true }
tello = { version = "0.6.3", optional = true }
tokio = { version = "1.23.0", features = ["full"], optional = true }
rppal = { version = "0.14.1", optional = true }

[features]
car-client = ["bevy", "serde", "rmp-serde", "iyes_loopless"]
car-server = ["serde", "rmp-serde", "tokio", "rppal"]
robot-client = ["bevy", "serde", "rmp-serde", "iyes_loopless"]
robot-server = ["serde", "rmp-serde", "tokio", "rppal"]
tello-client = ["bevy", "tello"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.aarch64-unknown-linux-gnu]
linker = "/usr/local/bin/aarch64-none-elf-gcc"

[target.aarch64-linux-android]
linker = "/Users/edwardbeech/Library/Android/sdk/ndk/22.1.7171670/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android30-clang"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.20"
libc = "0.2"
log = "0.4.14"
ndk = { version = "0.7", features = ["api-level-30"] }
ndk-context = "0.1.1"
android_logger = "0.11.0"
android-activity = { version = "0.4", features = ["native-activity"] }

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
apk_name = "car-client"

[package.metadata.android.sdk]
target_sdk_version = 30

# [[package.metadata.android.uses_feature]]
# name = "android.hardware.vulkan.level"
# required = true
# version = 1

# [[bin]]
# name = "car-client"
# required-features = ["car-client"]

# [[bin]]
# name = "robot-client"
# required-features = ["robot-client"]

[lib]
crate-type = ["cdylib"]
