[package]
name = "rc-things"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1" }
serde = { version = "1.0.148", features = ["derive"] }
rmp-serde = { version = "1.1.1" }
iyes_loopless = { version = "0.9.1", features = ["fixedtimestep"] }
tello = { version = "0.6.3" }
tokio = { version = "1.23.0", features = ["full"] }
rppal = { version = "0.14.1", optional = true }
openh264 = { version = "0.4.0", optional = true }
serde_derive = "1.0.152"
bevy_video = "0.9.1"

[features]
car-client = []
car-server = ["rppal", "bevy/x11"]
robot-client = []
robot-server = ["rppal", "bevy/x11"]
tello-client = ["openh264"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.aarch64-unknown-linux-gnu]
linker = "/usr/local/bin/aarch64-none-elf-gcc"
