[package]
name = "esp32-rc-car"
version = "0.1.0"
authors = ["Edward Beech <initialed85@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = { version = "1.0.70" }
esp-idf-sys = { version = "0.34.1", features = ["binstart"] }
esp-idf-hal = { version = "0.43.1" }
esp-idf-svc = { version = "0.48.1" }
embedded-svc = { version = "0.27.1" }
serde = { version = "1.0.148", features = ["derive"] }
rmp-serde = { version = "1.1.1" }
serde_derive = "1.0.152"
rc-vehicle = { path = "../rc-vehicle" }
rc-messaging = { path = "../rc-messaging" }

[build-dependencies]
embuild = "0.31.1"
