[package]
name = "rc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1" }
serde = { version = "1.0.148", features = ["derive"] }
rmp-serde = { version = "1.1.1" }
iyes_loopless = { version = "0.9.1", features = ["fixedtimestep"] }
tello = { version = "0.6.3" }
tokio = { version = "1.23.0", features = ["full"] }
serde_derive = "1.0.152"
rc-messaging = { path = "../rc-messaging" }
